--- a/ki-21-1fmb.html
+++ b/ki-21-1fmb.html
@@ -23,6 +23,299 @@
 <h2 id="date"></h2>
 <script src="index.js"></script>
 <div class="rozklad">
+    <a href="index.html" style="background-color: green; border: 1px solid black; text-decoration: none; color: black;">1-ий тиждень</a>
+    <a href="indexyellow.html" style="background-color: yellow; border: 1px solid black; text-decoration: none; color: black;">2-ий тиждень</a>
+    <h3>Понеділок</h3>
+    <table>
+        <thead>
+        <tr>
+            <th>№</th>
+            <th>Час</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+        </tr>
+        </thead>
+        <tr>
+            <td>1</td>
+            <td>08:30-09:50</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>10:00-11:20</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>11:40-13:00</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>13:10-14:30</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>14:40-16:10</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>16:10-17:30</td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    <!-------------------------------------->
+    <h3>Вівторок</h3>
+    <table>
+        <thead>
+        <tr>
+            <th>№</th>
+            <th>Час</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+        </tr>
+        </thead>
+        <tr>
+            <td>1</td>
+            <td>08:30-09:50</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>10:00-11:20</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>11:40-13:00</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>13:10-14:30</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>14:40-16:10</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>16:10-17:30</td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    <!-------------------------------------->
+    <h3>Середа</h3>
+    <table>
+        <thead>
+        <tr>
+            <th>№</th>
+            <th>Час</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+        </tr>
+        </thead>
+        <tr>
+            <td>1</td>
+            <td>08:30-09:50</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>10:00-11:20</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>11:40-13:00</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>13:10-14:30</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>14:40-16:10</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>16:10-17:30</td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    <!-------------------------------------->
+    <h3>Четвер</h3>
+    <table>
+        <thead>
+        <tr>
+            <th>№</th>
+            <th>Час</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+        </tr>
+        </thead>
+        <tr>
+            <td>1</td>
+            <td>08:30-09:50</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>10:00-11:20</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>11:40-13:00</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>13:10-14:30</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>14:40-16:10</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>16:10-17:30</td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    <!-------------------------------------->
+    <h3>П'ятниця</h3>
+    <table>
+        <thead>
+        <tr>
+            <th>№</th>
+            <th>Час</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+        </tr>
+        </thead>
+        <tr>
+            <td>1</td>
+            <td>08:30-09:50</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>10:00-11:20</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>11:40-13:00</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>13:10-14:30</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>14:40-16:10</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>16:10-17:30</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <!-------------------------------------->
+        <h3>Субота</h3>
+        <table>
+            <thead>
+            <tr>
+                <th>№</th>
+                <th>Час</th>
+                <th>Дисципліна</th>
+                <th>Zoom</th>
+            </tr>
+            </thead>
+            <tr>
+                <td>1</td>
+                <td>08:30-09:50</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>10:00-11:20</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>11:40-13:00</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>13:10-14:30</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>14:40-16:10</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>16:10-17:30</td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
+    </table>
+    <h4><i>Розклад було оновлено 02.02</i></h4>
+</div>
+<div class="rozklad">
+    <h1>Старий розклад</h1>
     <a href="ki-21-1fmb.html" style="background-color: green; border: 1px solid black; text-decoration: none; color: black;margin-bottom: 10px ;">1-ий тиждень</a>
     <a href="ki-21-1fmbyellow.html" style="background-color: yellow; border: 1px solid black; text-decoration: none; color: black;">2-ий тиждень</a><br><br>
     <a href="ki-21-1fmb-eupore.html" style="background-color: green; border: 1px solid black; text-decoration: none; color: black;">1-ий тиждень-EU</a>
