--- a/perekladachka.html
+++ b/perekladachka.html
@@ -39,6 +39,348 @@
         <tr>
             <td>1</td>
             <td>08:30-09:50</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>10:00-11:20</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>11:40-13:00</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>13:10-14:30</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>14:40-16:10</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>16:10-17:30</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    <!-------------------------------------->
+    <h3>Вівторок</h3>
+    <table>
+        <thead>
+        <tr>
+            <th>№</th>
+            <th>Час</th>
+            <th>Групи</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+        </tr>
+        </thead>
+        <tr>
+            <td>1</td>
+            <td>08:30-09:50</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>10:00-11:20</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td><p class='red'>11:30-13:00</p></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>13:10-14:30</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>14:40-16:10</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>16:10-17:30</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    <!-------------------------------------->
+    <h3>Середа</h3>
+    <table>
+        <thead>
+        <tr>
+            <th>№</th>
+            <th>Час</th>
+            <th>Групи</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+        </tr>
+        </thead>
+        <tr>
+            <td>1</td>
+            <td>08:30-09:50</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>10:00-11:20</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>11:40-13:00</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>13:10-14:30</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>14:40-16:10</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>16:10-17:30</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    <!-------------------------------------->
+    <h3>Четвер</h3>
+    <table>
+        <thead>
+        <tr>
+            <th>№</th>
+            <th>Час</th>
+            <th>Групи</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+        </tr>
+        </thead>
+        <tr>
+            <td>1</td>
+            <td>08:30-09:50</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>10:00-11:20</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>11:40-13:00</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>13:10-14:30</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr style="display: none">
+            <td>5</td>
+            <td>14:40-16:10</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>16:10-17:30</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    <!-------------------------------------->
+    <h3>П'ятниця</h3>
+    <table>
+        <thead>
+        <tr>
+            <th>№</th>
+            <th>Час</th>
+            <th>Групи</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+        </tr>
+        </thead>
+        <tr>
+            <td>1</td>
+            <td>08:30-09:50</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>10:00-11:20</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+        <tr>
+            <td rowspan="2">3</td>
+            <td rowspan="2">11:40-13:00</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>13:10-14:30</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>14:40-16:10</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>16:10-17:30</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    <!-------------------------------------->
+    <h3>Субота</h3>
+    <table>
+        <thead>
+        <tr>
+            <th>№</th>
+            <th>Час</th>
+            <th>Групи</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+        </tr>
+        </thead>
+        <tr>
+            <td>1</td>
+            <td>08:30-09:50</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>10:00-11:20</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>11:40-13:00</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr style="display: none">
+            <td>4</td>
+            <td>13:10-14:30</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>14:40-16:10</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>16:10-17:30</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    <h4><i>Розклад було оновлено 02.02</i></h4>
+</div>
+<div class="rozklad" >
+    <h1>Старий розклад</h1>
+    <a href="perekladachka.html" style="background-color: green; border: 1px solid black; text-decoration: none; color: black;">1-ий тиждень</a>
+    <a href="perekladachkayellow.html" style="background-color: yellow; border: 1px solid black; text-decoration: none; color: black;">2-ий тиждень</a>
+    <h3>Понеділок</h3>
+    <table>
+        <thead>
+        <tr>
+            <th>№</th>
+            <th>Час</th>
+            <th>Групи</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+        </tr>
+        </thead>
+        <tr>
+            <td>1</td>
+            <td>08:30-09:50</td>
             <td>ПІ-Д, ПІ-К</td>
             <td>Філософія_ Женжера Сергій Володимирович  (лекція) </td>
             <td><a href="https://us02web.zoom.us/j/89604024498?pwd=zdTtYUQcK9BMfbBclS2rKxhYqhlDcb.1" target="_blank">Натисніть</a></td>
