--- a/ki-21-1fmb.html
+++ b/ki-21-1fmb.html
@@ -23,8 +23,8 @@
 <h2 id="date"></h2>
 <script src="index.js"></script>
 <div class="rozklad">
-    <a href="index.html" style="background-color: green; border: 1px solid black; text-decoration: none; color: black;">1-ий тиждень</a>
-    <a href="indexyellow.html" style="background-color: yellow; border: 1px solid black; text-decoration: none; color: black;">2-ий тиждень</a>
+    <a href="ki-21-1fmb.html" style="background-color: green; border: 1px solid black; text-decoration: none; color: black;">1-ий тиждень</a>
+    <a href="ki-21-1fmbyellow.html" style="background-color: yellow; border: 1px solid black; text-decoration: none; color: black;">2-ий тиждень</a>
     <h3>Понеділок</h3>
     <table>
         <thead>
