--- a/ki-21-1fmb.html
+++ b/ki-21-1fmb.html
@@ -62,14 +62,14 @@
         <tr>
             <td>5</td>
             <td>14:40-16:10</td>
-            <td></td>
-            <td></td>
+            <td>Дослідження операцій_(лекція)_Мельник Олександр Вікторович</td>
+            <td><a href="https://us04web.zoom.us/j/6224901769?pwd=TUtzc0taaU1HNzBxZ21pbUI2L2NSUT09" target="_blank">Натисніть</a></td>
         </tr>
         <tr>
             <td>6</td>
             <td>16:10-17:30</td>
-            <td></td>
-            <td></td>
+            <td>Дослідження операцій_(лекція)_Мельник Олександр Вікторович</td>
+            <td><a href="https://us04web.zoom.us/j/6224901769?pwd=TUtzc0taaU1HNzBxZ21pbUI2L2NSUT09" target="_blank">Натисніть</a></td>
         </tr>
     </table>
     <!-------------------------------------->
@@ -98,26 +98,26 @@
         <tr>
             <td>3</td>
             <td>11:40-13:00</td>
-            <td></td>
-            <td></td>
+            <td>Охорона праці в галузі_(лекція)_Романюк О.О.</td>
+            <td><a href="https://us02web.zoom.us/j/89215386482?pwd=b6dLaahW2D4sObbNxyEGCsvFaPNzAq.1" target="_blank">Натисніть</a></td>
         </tr>
         <tr>
             <td>4</td>
             <td>13:10-14:30</td>
-            <td></td>
-            <td></td>
+            <td>Архітектура та проєктування програмного забезпечення_(лекція)_Талалаєв Володимир Опанасович</td>
+            <td><a href="https://us05web.zoom.us/j/6946850059?pwd=VWhOaGd5RVErNHBNNEI5RGVybVpBQT09" target="_blank">Натисніть</a> Код доступа: RB7NaD</td>
         </tr>
         <tr>
             <td>5</td>
             <td>14:40-16:10</td>
-            <td></td>
-            <td></td>
+            <td>Архітектура та проєктування програмного забезпечення_(практична)_Талалаєв Володимир Опанасович</td>
+            <td><a href="https://us05web.zoom.us/j/6946850059?pwd=VWhOaGd5RVErNHBNNEI5RGVybVpBQT09" target="_blank">Натисніть</a> Код доступа: RB7NaD</td>
         </tr>
         <tr>
             <td>6</td>
             <td>16:10-17:30</td>
-            <td></td>
-            <td></td>
+            <td>Архітектура та проєктування програмного забезпечення_(лекція)_Талалаєв Володимир Опанасович</td>
+            <td><a href="https://us05web.zoom.us/j/6946850059?pwd=VWhOaGd5RVErNHBNNEI5RGVybVpBQT09" target="_blank">Натисніть</a> Код доступа: RB7NaD</td>
         </tr>
     </table>
     <!-------------------------------------->
