--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Розклад ПІ-22-1-ict</title>
     <link rel="stylesheet" href="rozklad.css">
 </head>
-<body>
+<body id="snow">
 <header>
     <div class="h1">
         <h1>Розклад занять ПІ-22-1-ict (1тиж)</h1>
@@ -135,8 +135,8 @@
         <tr>
             <td>1</td>
             <td>08:30-09:50</td>
-            <td></td>
-            <td></td>
+            <td>Бази даних_ (лекція)_ Міронов Юрій Глібович</td>
+            <td><a href="https://us04web.zoom.us/j/6635209883?pwd=K0NCS0hrZnI4d3U1RExUWlVTbVNQQT09" target="_blank">Натисніть</a></td>
         </tr>
         <tr>
             <td>2</td>
@@ -147,20 +147,20 @@
         <tr>
             <td>3</td>
             <td>11:40-13:00</td>
-            <td></td>
-            <td></td>
+            <td>Технологія інтернет речей _(лекція)_ Дуднік Андрій Сергійович</td>
+            <td><a href="https://us04web.zoom.us/j/74580760680?pwd=XgG9RF2wERJDMms0OnIJn0woGn8VMi.1" target="_blank">Натисніть</a></td>
         </tr>
         <tr>
             <td>4</td>
             <td>13:10-14:30</td>
-            <td></td>
-            <td></td>
+            <td>Технологія інтернет речей _(практична)_ Дуднік Андрій Сергійович</td>
+            <td><a href="https://us04web.zoom.us/j/74580760680?pwd=XgG9RF2wERJDMms0OnIJn0woGn8VMi.1" target="_blank">Натисніть</a></td>
         </tr>
         <tr>
             <td>5</td>
             <td>14:40-16:10</td>
-            <td></td>
-            <td></td>
+            <td>Охорона праці в галузі_ (практична)_ Романюк О.О.</td>
+            <td><a href="https://us02web.zoom.us/j/89215386482?pwd=b6dLaahW2D4sObbNxyEGCsvFaPNzAq.1" target="_blank">Натисніть</a></td>
         </tr>
         <tr>
             <td>6</td>
@@ -189,8 +189,62 @@
         <tr>
             <td>2</td>
             <td>10:00-11:20</td>
+            <td>Основи кіберфізичних систем_ (лекція)_ Молчанов Андрій Сергійович</td>
+            <td><a href="https://zoom.us/j/4415014552?pwd=GXzzLqgfQB2DbvBNtqj5kH3YibkjLm.1&omn=91342973471" target="_blank">Натисніть</a></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>11:40-13:00</td>
+            <td>Програмування мікроконтролерів_ (лекція)_ Самарай Валерій Петрович</td>
+            <td><a href="https://us04web.zoom.us/j/6758492120?pwd=QVlYdDhBb0hpRFU3TGNMdzJPbysyUT09" target="_blank">Натисніть</a></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>13:10-14:30</td>
+            <td>Програмування мікроконтролерів_ (практична)_ Самарай Валерій Петрович</td>
+            <td><a href="https://us04web.zoom.us/j/6758492120?pwd=QVlYdDhBb0hpRFU3TGNMdzJPbysyUT09" target="_blank">Натисніть</a></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>14:40-16:10</td>
             <td></td>
             <td></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>16:10-17:30</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>17:40-19:00</td>
+            <td>Іноземна мова за професійним спрямуванням_ (практична)_ Домніч Л.М.</td>
+            <td><a href="https://us05web.zoom.us/j/87695261383?pwd=QaNbjMDteeSKfTgjkn9oanJATNdqax.1" target="_blank">Натисніть</a></td>
+        </tr>
+    </table>
+    <!-------------------------------------->
+    <h3>П'ятниця</h3>
+    <table>
+        <thead>
+        <tr>
+            <th>№</th>
+            <th>Час</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+        </tr>
+        </thead>
+        <tr>
+            <td>1</td>
+            <td>08:30-09:50</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>10:00-11:20</td>
+            <td>Основи кіберфізичних систем_ (практична)_ Молчанов Андрій Сергійович</td>
+            <td><a href="https://zoom.us/j/4415014552?pwd=GXzzLqgfQB2DbvBNtqj5kH3YibkjLm.1&omn=91342973471" target="_blank">Натисніть</a></td>
         </tr>
         <tr>
             <td>3</td>
@@ -217,53 +271,6 @@
             <td></td>
         </tr>
     </table>
-    <!-------------------------------------->
-    <h3>П'ятниця</h3>
-    <table>
-        <thead>
-        <tr>
-            <th>№</th>
-            <th>Час</th>
-            <th>Дисципліна</th>
-            <th>Zoom</th>
-        </tr>
-        </thead>
-        <tr>
-            <td>1</td>
-            <td>08:30-09:50</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>10:00-11:20</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>11:40-13:00</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>13:10-14:30</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>5</td>
-            <td>14:40-16:10</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>6</td>
-            <td>16:10-17:30</td>
-            <td></td>
-            <td></td>
-        </tr>
         <!-------------------------------------->
         <h3>Субота</h3>
         <table>
@@ -290,8 +297,8 @@
             <tr>
                 <td>3</td>
                 <td>11:40-13:00</td>
-                <td></td>
-                <td></td>
+                <td>Основи проєктування цифрових систем керування_ (лекція)_ Самарай Валерій Петрович</td>
+                <td><a href="https://us05web.zoom.us/j/4064053802?pwd=SzJwcktBekJvRjlPS1pEbllhdnJndz09&omn=87135720294" target="_blank">Натисніть</a></td>
             </tr>
             <tr>
                 <td>4</td>
@@ -312,7 +319,7 @@
                 <td></td>
             </tr>
         </table>
-    </table>
+
     <h4><i>Розклад було оновлено 02.02</i></h4>
 </div>
 <div class="rozklad">
