--- a/indexyellow.html
+++ b/indexyellow.html
@@ -128,8 +128,8 @@
         <tr>
             <th>№</th>
             <th>Час</th>
-            <th>Дисципліна</th>
-            <th>Zoom</th>
+            <td>Бази даних_ (практична)_ Міронов Юрій Глібович</td>
+            <td><a href="https://us04web.zoom.us/j/6635209883?pwd=K0NCS0hrZnI4d3U1RExUWlVTbVNQQT09" target="_blank">Натисніть</a></td>
         </tr>
         </thead>
         <tr>
