--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -69,16 +69,16 @@
     <tr>
         <td>5</td>
         <td>14:40-16:10</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>ВСІ</td>
+        <td>Дослідження операцій_ (лекція)_ Мельник Олександр Вікторович</td>
+        <td><a href="https://us04web.zoom.us/j/6224901769?pwd=TUtzc0taaU1HNzBxZ21pbUI2L2NSUT09" target="_blank">Натисніть</a></td>
     </tr>
     <tr>
         <td>6</td>
         <td>16:10-17:30</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>ВСІ</td>
+        <td>Дослідження операцій_ (лекція)_ Мельник Олександр Вікторович</td>
+        <td><a href="https://us04web.zoom.us/j/6224901769?pwd=TUtzc0taaU1HNzBxZ21pbUI2L2NSUT09" target="_blank">Натисніть</a></td>
     </tr>
 </table>
 <!-------------------------------------->
@@ -86,54 +86,46 @@
 <table>
     <thead>
     <tr>
-        <th>№</th>
-        <th>Час</th>
-        <th>Групи</th>
-        <th>Дисципліна</th>
-        <th>Zoom</th>
-    </tr>
-    </thead>
-    <tr>
         <td>1</td>
         <td>08:30-09:50</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>ІКТ</td>
+        <td>Архітектура та проєктування програмного забезпечення_ (лекція)_ Талалаєв Володимир Опанасович</td>
+        <td><a href="https://us05web.zoom.us/j/6946850059?pwd=VWhOaGd5RVErNHBNNEI5RGVybVpBQT09" target="_blank">Натисніть</a> Код доступа: RB7NaD</td>
     </tr>
     <tr>
         <td>2</td>
         <td>10:00-11:20</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>ІКТ</td>
+        <td>Архітектура та проєктування програмного забезпечення_ (практична)_ Талалаєв Володимир Опанасович</td>
+        <td><a href="https://us05web.zoom.us/j/6946850059?pwd=VWhOaGd5RVErNHBNNEI5RGVybVpBQT09" target="_blank">Натисніть</a> Код доступа: RB7NaD</td>
     </tr>
     <tr>
         <td>3</td>
-        <td><p class='red'>11:30-13:00</p></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>11:40-13:00</td>
+        <td>ВСІ</td>
+        <td>Охорона праці в галузі_ (лекція)_ Романюк О.О.</td>
+        <td><a href="https://us02web.zoom.us/j/89215386482?pwd=b6dLaahW2D4sObbNxyEGCsvFaPNzAq.1" target="_blank">Натисніть</a></td>
     </tr>
     <tr>
         <td>4</td>
         <td>13:10-14:30</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>ФМБ</td>
+        <td>Архітектура та проєктування програмного забезпечення_ (лекція)_ Талалаєв Володимир Опанасович</td>
+        <td><a href="https://us05web.zoom.us/j/6946850059?pwd=VWhOaGd5RVErNHBNNEI5RGVybVpBQT09" target="_blank">Натисніть</a> Код доступа: RB7NaD</td>
     </tr>
     <tr>
         <td>5</td>
         <td>14:40-16:10</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>ФМБ</td>
+        <td>Архітектура та проєктування програмного забезпечення_ (практична)_ Талалаєв Володимир Опанасович</td>
+        <td><a href="https://us05web.zoom.us/j/6946850059?pwd=VWhOaGd5RVErNHBNNEI5RGVybVpBQT09" target="_blank">Натисніть</a> Код доступа: RB7NaD</td>
     </tr>
     <tr>
         <td>6</td>
         <td>16:10-17:30</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>ФМБ</td>
+        <td>Архітектура та проєктування програмного забезпечення_ (практична)_ Талалаєв Володимир Опанасович</td>
+        <td><a href="https://us05web.zoom.us/j/6946850059?pwd=VWhOaGd5RVErNHBNNEI5RGVybVpBQT09" target="_blank">Натисніть</a> Код доступа: RB7NaD</td>
     </tr>
 </table>
 <!-------------------------------------->
@@ -141,47 +133,49 @@
 <table>
     <thead>
     <tr>
-        <th>№</th>
-        <th>Час</th>
-        <th>Групи</th>
-        <th>Дисципліна</th>
-        <th>Zoom</th>
-    </tr>
-    </thead>
-    <tr>
         <td>1</td>
         <td>08:30-09:50</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>ІКТ</td>
+        <td>Бази даних_ (практична)_ Міронов Юрій Глібович</td>
+        <td><a href="https://us04web.zoom.us/j/6635209883?pwd=K0NCS0hrZnI4d3U1RExUWlVTbVNQQT09" target="_blank">Натисніть</a></td>
     </tr>
     <tr>
         <td>2</td>
         <td>10:00-11:20</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>ІКТ</td>
+        <td>Дослідження операцій_ (практична)_ Мельник Олександр Вікторович</td>
+        <td><a href="https://us04web.zoom.us/j/6224901769?pwd=TUtzc0taaU1HNzBxZ21pbUI2L2NSUT09" target="_blank">Натисніть</a></td>
     </tr>
     <tr>
-        <td>3</td>
-        <td>11:40-13:00</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td rowspan="2">3</td>
+        <td rowspan="2">11:40-13:00</td>
+        <td>ІКТ</td>
+        <td>Технологія інтернет речей _(лекція)_ Дуднік Андрій Сергійович</td>
+        <td><a href="https://us04web.zoom.us/j/74580760680?pwd=XgG9RF2wERJDMms0OnIJn0woGn8VMi.1" target="_blank">Натисніть</a></td>
     </tr>
     <tr>
-        <td>4</td>
-        <td>13:10-14:30</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>ФМБ</td>
+        <td>Бази даних_ (лекція)_ Міронов Юрій Глібович</td>
+        <td><a href="https://us04web.zoom.us/j/6635209883?pwd=K0NCS0hrZnI4d3U1RExUWlVTbVNQQT09" target="_blank">Натисніть</a></td>
+    </tr>
+    <tr>
+        <td rowspan="2">4</td>
+        <td rowspan="2">13:10-14:30</td>
+        <td>ІКТ</td>
+        <td>Технологія інтернет речей _(практична)_ Дуднік Андрій Сергійович</td>
+        <td><a href="https://us04web.zoom.us/j/74580760680?pwd=XgG9RF2wERJDMms0OnIJn0woGn8VMi.1" target="_blank">Натисніть</a></td>
+    </tr>
+    <tr>
+        <td>ФМБ</td>
+        <td>Бази даних_ (практична)_ Міронов Юрій Глібович</td>
+        <td><a href="https://us04web.zoom.us/j/6635209883?pwd=K0NCS0hrZnI4d3U1RExUWlVTbVNQQT09" target="_blank">Натисніть</a></td>
     </tr>
     <tr>
         <td>5</td>
         <td>14:40-16:10</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>ВСІ</td>
+        <td>Охорона праці в галузі_ (практична)_ Романюк О.О.</td>
+        <td><a href="https://us02web.zoom.us/j/89215386482?pwd=b6dLaahW2D4sObbNxyEGCsvFaPNzAq.1" target="_blank">Натисніть</a></td>
     </tr>
     <tr>
         <td>6</td>
@@ -204,34 +198,37 @@
     </tr>
     </thead>
     <tr>
-        <td>1</td>
-        <td>08:30-09:50</td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    <tr>
         <td>2</td>
         <td>10:00-11:20</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>ВСІ</td>
+        <td>Основи кіберфізичних систем_ (лекція)_ Молчанов Андрій Сергійович</td>
+        <td><a href="https://zoom.us/j/4415014552?pwd=GXzzLqgfQB2DbvBNtqj5kH3YibkjLm.1&omn=91342973471" target="_blank">Натисніть</a></td>
     </tr>
     <tr>
-        <td>3</td>
-        <td>11:40-13:00</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td rowspan="2">3</td>
+        <td rowspan="2">11:40-13:00</td>
+        <td>ІКТ</td>
+        <td>Програмування мікроконтролерів_ (лекція)_ Самарай Валерій Петрович</td>
+        <td><a href="https://us04web.zoom.us/j/6758492120?pwd=QVlYdDhBb0hpRFU3TGNMdzJPbysyUT09" target="_blank">Натисніть</a></td>
     </tr>
     <tr>
-        <td>4</td>
-        <td>13:10-14:30</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>ФМБ</td>
+        <td>Основи кіберфізичних систем_ (практична)_ Молчанов Андрій Сергійович</td>
+        <td><a href="https://zoom.us/j/4415014552?pwd=GXzzLqgfQB2DbvBNtqj5kH3YibkjLm.1&omn=91342973471" target="_blank">Натисніть</a></td>
     </tr>
-    <tr style="display: none">
+    <tr>
+        <td rowspan="2">4</td>
+        <td rowspan="2">13:10-14:30</td>
+        <td>ІКТ</td>
+        <td>Програмування мікроконтролерів_ (лекція)_ Самарай Валерій Петрович</td>
+        <td><a href="https://us04web.zoom.us/j/6758492120?pwd=QVlYdDhBb0hpRFU3TGNMdzJPbysyUT09" target="_blank">Натисніть</a></td>
+    </tr>
+    <tr>
+        <td>ФМБ</td>
+        <td>Основи кіберфізичних систем_ (практична)_ Молчанов Андрій Сергійович</td>
+        <td><a href="https://zoom.us/j/4415014552?pwd=GXzzLqgfQB2DbvBNtqj5kH3YibkjLm.1&omn=91342973471" target="_blank">Натисніть</a></td>
+    </tr>
+    <tr>
         <td>5</td>
         <td>14:40-16:10</td>
         <td></td>
@@ -241,9 +238,16 @@
     <tr>
         <td>6</td>
         <td>16:10-17:30</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>ФМБ</td>
+        <td>Дослідження операцій_ (практична)_ Мельник Олександр Вікторович</td>
+        <td><a href="https://us04web.zoom.us/j/6224901769?pwd=TUtzc0taaU1HNzBxZ21pbUI2L2NSUT09" target="_blank">Натисніть</a></td>
+    </tr>
+    <tr>
+        <td>7</td>
+        <td>17:40-19:00</td>
+        <td>ВСІ</td>
+        <td>Іноземна мова за професійним спрямуванням_ (практична)_ Домніч Л.М.</td>
+        <td><a href="https://us05web.zoom.us/j/87695261383?pwd=QaNbjMDteeSKfTgjkn9oanJATNdqax.1" target="_blank">Натисніть</a></td>
     </tr>
 </table>
 <!-------------------------------------->
@@ -268,29 +272,23 @@
     <tr>
         <td>2</td>
         <td>10:00-11:20</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>ІКТ</td>
+        <td>Основи кіберфізичних систем_ (практична)_ Молчанов Андрій Сергійович</td>
+        <td><a href="https://zoom.us/j/4415014552?pwd=GXzzLqgfQB2DbvBNtqj5kH3YibkjLm.1&omn=91342973471" target="_blank">Натисніть</a></td>
     </tr>
     <tr>
-    <tr>
-        <td rowspan="2">3</td>
-        <td rowspan="2">11:40-13:00</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    </tr>
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>3</td>
+        <td>11:40-13:00</td>
+        <td>ФМБ-КІ</td>
+        <td>Основи проєктування цифрових систем керування_ (практична)_ Самарай Валерій Петрович</td>
+        <td><a href="https://us05web.zoom.us/j/4064053802?pwd=SzJwcktBekJvRjlPS1pEbllhdnJndz09&omn=87135720294" target="_blank">Натисніть</a></td>
     </tr>
     <tr>
         <td>4</td>
         <td>13:10-14:30</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>ФМБ-КІ</td>
+        <td>Обслуговування комп'ютерних систем і мереж_ (практична)_ Авдалов Герман Вікторович</td>
+        <td><a href="https://us05web.zoom.us/j/4064053802?pwd=SzJwcktBekJvRjlPS1pEbllhdnJndz09&omn=87135720294" target="_blank">Натисніть</a></td>
     </tr>
     <tr>
         <td>5</td>
@@ -322,25 +320,25 @@
     <tr>
         <td>1</td>
         <td>08:30-09:50</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>ФМБ-КІ</td>
+        <td>Основи проєктування цифрових систем керування_ (лекція)_ Самарай Валерій Петрович</td>
+        <td><a href="https://us05web.zoom.us/j/4064053802?pwd=SzJwcktBekJvRjlPS1pEbllhdnJndz09&omn=87135720294" target="_blank">Натисніть</a></td>
     </tr>
     <tr>
         <td>2</td>
         <td>10:00-11:20</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>ФМБ-КІ</td>
+        <td>Основи проєктування цифрових систем керування_ (практична)_ Самарай Валерій Петрович</td>
+        <td><a href="https://us05web.zoom.us/j/4064053802?pwd=SzJwcktBekJvRjlPS1pEbllhdnJndz09&omn=87135720294" target="_blank">Натисніть</a></td>
     </tr>
     <tr>
         <td>3</td>
         <td>11:40-13:00</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>ІКТ (з можливістю навчання на ФМБ)</td>
+        <td>Основи проєктування цифрових систем керування_ (практична)_ Самарай Валерій Петрович</td>
+        <td><a href="https://us05web.zoom.us/j/4064053802?pwd=SzJwcktBekJvRjlPS1pEbllhdnJndz09&omn=87135720294" target="_blank">Натисніть</a></td>
     </tr>
-    <tr style="display: none">
+    <tr>
         <td>4</td>
         <td>13:10-14:30</td>
         <td></td>
