--- a/perekladachka.html
+++ b/perekladachka.html
@@ -116,21 +116,21 @@
         <tr>
             <td>4</td>
             <td>13:10-14:30</td>
-            <td>ФМБ</td>
+            <td>ВСІ</td>
             <td>Архітектура та проєктування програмного забезпечення_ (лекція)_ Талалаєв Володимир Опанасович</td>
             <td><a href="https://us05web.zoom.us/j/6946850059?pwd=VWhOaGd5RVErNHBNNEI5RGVybVpBQT09" target="_blank">Натисніть</a> Код доступа: RB7NaD</td>
         </tr>
         <tr>
             <td>5</td>
             <td>14:40-16:10</td>
-            <td>ФМБ</td>
+            <td>ВСІ</td>
             <td>Архітектура та проєктування програмного забезпечення_ (практична)_ Талалаєв Володимир Опанасович</td>
             <td><a href="https://us05web.zoom.us/j/6946850059?pwd=VWhOaGd5RVErNHBNNEI5RGVybVpBQT09" target="_blank">Натисніть</a> Код доступа: RB7NaD</td>
         </tr>
         <tr>
             <td>6</td>
             <td>16:10-17:30</td>
-            <td>ФМБ</td>
+            <td>ВСІ</td>
             <td>Архітектура та проєктування програмного забезпечення_ (лекція)_ Талалаєв Володимир Опанасович</td>
             <td><a href="https://us05web.zoom.us/j/6946850059?pwd=VWhOaGd5RVErNHBNNEI5RGVybVpBQT09" target="_blank">Натисніть</a> Код доступа: RB7NaD</td>
         </tr>
