--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -47,10 +47,9 @@
     <tr>
         <td>2</td>
         <td>10:00-11:20</td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
+        <td>ВСІ</td>
+        <td>Архітектура та проєктування програмного забезпечення_ (практична)_ Талалаєв Володимир Опанасович</td>
+        <td><a href="https://us05web.zoom.us/j/6946850059?pwd=VWhOaGd5RVErNHBNNEI5RGVybVpBQT09" target="_blank">Натисніть</a> Код доступа: RB7NaD</td>
     </tr>
     <tr>
         <td>3</td>
@@ -123,9 +122,9 @@
     <tr>
         <td>6</td>
         <td>16:10-17:30</td>
-        <td>ВСІ</td>
-        <td>Архітектура та проєктування програмного забезпечення_ (практична)_ Талалаєв Володимир Опанасович</td>
-        <td><a href="https://us05web.zoom.us/j/6946850059?pwd=VWhOaGd5RVErNHBNNEI5RGVybVpBQT09" target="_blank">Натисніть</a> Код доступа: RB7NaD</td>
+        <td></td>
+        <td></td>
+        <td></td>
     </tr>
 </table>
 <!-------------------------------------->
@@ -288,7 +287,7 @@
         <td>13:10-14:30</td>
         <td>ФМБ-КІ</td>
         <td>Обслуговування комп'ютерних систем і мереж_ (практична)_ Авдалов Герман Вікторович</td>
-        <td><a href="https://us05web.zoom.us/j/4064053802?pwd=SzJwcktBekJvRjlPS1pEbllhdnJndz09&omn=87135720294" target="_blank">Натисніть</a></td>
+        <td><a href="https://us05web.zoom.us/j/83980652708?pwd=blZgTukbuThoRpgIaX0pZtXSbupLAv.1" target="_blank">Натисніть</a></td>
     </tr>
     <tr>
         <td>5</td>
