--- a/perekladachka.html
+++ b/perekladachka.html
@@ -344,21 +344,21 @@
             <td>08:30-09:50</td>
             <td>ФМБ-КІ</td>
             <td>Основи проєктування цифрових систем керування_ (лекція)_ Самарай Валерій Петрович</td>
-            <td><a href="https://us05web.zoom.us/j/4064053802?pwd=SzJwcktBekJvRjlPS1pEbllhdnJndz09&omn=87135720294" target="_blank">Натисніть</a></td>
+            <td><a href="https://us04web.zoom.us/j/6758492120?pwd=QVlYdDhBb0hpRFU3TGNMdzJPbysyUT09" target="_blank">Натисніть</a></td>
         </tr>
         <tr>
             <td>2</td>
             <td>10:00-11:20</td>
             <td>ФМБ-КІ</td>
             <td>Основи проєктування цифрових систем керування_ (практична)_ Самарай Валерій Петрович</td>
-            <td><a href="https://us05web.zoom.us/j/4064053802?pwd=SzJwcktBekJvRjlPS1pEbllhdnJndz09&omn=87135720294" target="_blank">Натисніть</a></td>
+            <td><a href="https://us04web.zoom.us/j/6758492120?pwd=QVlYdDhBb0hpRFU3TGNMdzJPbysyUT09" target="_blank">Натисніть</a></td>
         </tr>
         <tr>
             <td>3</td>
             <td>11:40-13:00</td>
             <td>ІКТ (з можливістю навчання на ФМБ)</td>
             <td>Основи проєктування цифрових систем керування_ (лекція)_ Самарай Валерій Петрович</td>
-            <td><a href="https://us05web.zoom.us/j/4064053802?pwd=SzJwcktBekJvRjlPS1pEbllhdnJndz09&omn=87135720294" target="_blank">Натисніть</a></td>
+            <td><a href="https://us04web.zoom.us/j/6758492120?pwd=QVlYdDhBb0hpRFU3TGNMdzJPbysyUT09" target="_blank">Натисніть</a></td>
         </tr>
         <tr>
             <td>4</td>
