--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -280,14 +280,14 @@
         <td>11:40-13:00</td>
         <td>ФМБ-КІ</td>
         <td>Основи проєктування цифрових систем керування_ (практична)_ Самарай Валерій Петрович</td>
-        <td><a href="https://us05web.zoom.us/j/4064053802?pwd=SzJwcktBekJvRjlPS1pEbllhdnJndz09&omn=87135720294" target="_blank">Натисніть</a></td>
+        <td><a href="https://us04web.zoom.us/j/6758492120?pwd=QVlYdDhBb0hpRFU3TGNMdzJPbysyUT09" target="_blank">Натисніть</a></td>
     </tr>
     <tr>
         <td>4</td>
         <td>13:10-14:30</td>
         <td>ФМБ-КІ</td>
         <td>Обслуговування комп'ютерних систем і мереж_ (практична)_ Авдалов Герман Вікторович</td>
-        <td><a href="https://us05web.zoom.us/j/83980652708?pwd=blZgTukbuThoRpgIaX0pZtXSbupLAv.1" target="_blank">Натисніть</a></td>
+        <td><a href="https://us05web.zoom.us/j/84591831941?pwd=cVAMkrfXqPKmQtoQd9aqClqaik6xSm.1" target="_blank">Натисніть</a></td>
     </tr>
     <tr>
         <td>5</td>
