--- a/perekladachka.html
+++ b/perekladachka.html
@@ -16,8 +16,8 @@
         <ul>
             <a href="perekladachka.html">Об'єднаний розклад</a>
             <a href="index.html">ПІ-22-1-ict</a>
-            <a href="ki-21-1fmb.html">КІ-21-1фмб</a>
-            <a href="icpyt.html">Заліки та іспити</a>
+            <!--<a href="ki-21-1fmb.html">КІ-21-1фмб</a>
+            <a href="icpyt.html">Заліки та іспити</a>-->
         </ul>
     </nav>
 
