--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <ul>
             <a href="perekladachka.html">Об'єднаний розклад</a>
             <a href="index.html">ПІ-22-1-ict</a>
-            <a href="ki-21-1fmb.html">КІ-21-1фмб</a>
-            <a href="icpyt.html">Заліки та іспити</a>
+            <!--<a href="ki-21-1fmb.html">КІ-21-1фмб</a>
+            <a href="icpyt.html">Заліки та іспити</a>-->
         </ul>
     </nav>
 
@@ -26,6 +26,7 @@
 <div class="rozklad">
     <a href="index.html" style="background-color: green; border: 1px solid black; text-decoration: none; color: black;">1-ий тиждень</a>
     <a href="indexyellow.html" style="background-color: yellow; border: 1px solid black; text-decoration: none; color: black;">2-ий тиждень</a>
+    <h1 style="color: red">Цей розклад містить помилки з посиланнями!!!</h1>
     <h3>Понеділок</h3>
     <table>
         <thead>
