--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -16,8 +16,8 @@
         <ul>
             <a href="perekladachkayellow.html">Об'єднаний розклад</a>
             <a href="indexyellow.html">ПІ-22-1-ict</a>
-            <a href="ki-21-1fmbyellow.html">КІ-21-1фмб</a>
-            <a href="icpyt.html">Заліки та іспити</a>
+            <!--<a href="ki-21-1fmbyellow.html">КІ-21-1фмб</a>
+            <a href="icpyt.html">Заліки та іспити</a>-->
         </ul>
     </nav>
 
