--- a/perekladachka.html
+++ b/perekladachka.html
@@ -9,17 +9,17 @@
 <body>
 <header>
     <div class="h1">
-        <h1>Розклад занять (1тиж)</h1>
+        <h1>Розклад занять ПІ-22-1ict (1тиж) від 14 квітня</h1>
     </div>
 </header>
-    <nav>
+    <!--nav>
         <ul>
             <a href="perekladachka.html">Об'єднаний розклад</a>
             <a href="index.html">ПІ-22-1-ict</a>
-            <!--<a href="ki-21-1fmb.html">КІ-21-1фмб</a>
-            <a href="icpyt.html">Заліки та іспити</a>-->
+            <<a href="ki-21-1fmb.html">КІ-21-1фмб</a>
+            <a href="icpyt.html">Заліки та іспити</a>>
         </ul>
-    </nav>
+</nav-->
 
 <h2 id="date"></h2>
 <script src="index.js"></script>
