--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -12,14 +12,14 @@
         <h1>Розклад занять (2тиж)</h1>
     </div>
 </header>
-    <nav>
+    <!--<nav>
         <ul>
             <a href="perekladachkayellow.html">Об'єднаний розклад</a>
             <a href="indexyellow.html">ПІ-22-1-ict</a>
-            <!--<a href="ki-21-1fmbyellow.html">КІ-21-1фмб</a>
-            <a href="icpyt.html">Заліки та іспити</a>-->
+            <a href="ki-21-1fmbyellow.html">КІ-21-1фмб</a>
+            <a href="icpyt.html">Заліки та іспити</a>
         </ul>
-    </nav>
+    </nav>-->
 
 <h2 id="date"></h2>
 <script src="index.js"></script>
