--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -88,36 +88,36 @@
         <td>1</td>
         <td>08:30-09:50</td>
         <td></td>
-        <td></td>
-        <td></td>
+        <td>Архітектура та проєктування програмного забезпечення_ (лекція)_ Талалаєв Володимир Опанасович</td>
+        <td><a href="https://us05web.zoom.us/j/6946850059?pwd=VWhOaGd5RVErNHBNNEI5RGVybVpBQT09" target="_blank">Натисніть</a> Код доступа: RB7NaD</td>
     </tr>
     <tr>
         <td>2</td>
         <td>10:00-11:20</td>
         <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>11:40-13:00</td>
-        <td>ВСІ</td>
-        <td>Охорона праці в галузі_ (лекція)_ Романюк О.О.</td>
-        <td><a href="https://us02web.zoom.us/j/89215386482?pwd=b6dLaahW2D4sObbNxyEGCsvFaPNzAq.1" target="_blank">Натисніть</a></td>
-    </tr>
-    <tr>
-        <td>4</td>
-        <td>13:10-14:30</td>
-        <td>ВСІ</td>
         <td>Архітектура та проєктування програмного забезпечення_ (лекція)_ Талалаєв Володимир Опанасович</td>
         <td><a href="https://us05web.zoom.us/j/6946850059?pwd=VWhOaGd5RVErNHBNNEI5RGVybVpBQT09" target="_blank">Натисніть</a> Код доступа: RB7NaD</td>
     </tr>
     <tr>
+        <td>3</td>
+        <td>11:40-13:00</td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>4</td>
+        <td>13:10-14:30</td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
         <td>5</td>
         <td>14:40-16:10</td>
-        <td>ВСІ</td>
-        <td>Архітектура та проєктування програмного забезпечення_ (практична)_ Талалаєв Володимир Опанасович</td>
-        <td><a href="https://us05web.zoom.us/j/6946850059?pwd=VWhOaGd5RVErNHBNNEI5RGVybVpBQT09" target="_blank">Натисніть</a> Код доступа: RB7NaD</td>
+        <td></td>
+        <td></td>
+        <td></td>
     </tr>
     <tr>
         <td>6</td>
