--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -85,6 +85,14 @@
 <table>
     <thead>
     <tr>
+        <th>№</th>
+        <th>Час</th>
+        <th>Групи</th>
+        <th>Дисципліна</th>
+        <th>Zoom</th>
+    </tr>
+    </thead>
+    <tr>
         <td>1</td>
         <td>08:30-09:50</td>
         <td></td>
@@ -131,6 +139,14 @@
 <h3>Середа</h3>
 <table>
     <thead>
+    <tr>
+        <th>№</th>
+        <th>Час</th>
+        <th>Групи</th>
+        <th>Дисципліна</th>
+        <th>Zoom</th>
+    </tr>
+    </thead>
     <tr>
         <td>1</td>
         <td>08:30-09:50</td>
