--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -228,7 +228,7 @@
         <td>4</td>
         <td>13:10-14:30</td>
         <td></td>
-        <td>Програмування мікроконтролерів_ (лекція)_ Самарай Валерій Петрович</td>
+        <td>Програмування мікроконтролерів_ (практична)_ Самарай Валерій Петрович</td>
         <td><a href="https://us04web.zoom.us/j/6758492120?pwd=QVlYdDhBb0hpRFU3TGNMdzJPbysyUT09" target="_blank">Натисніть</a></td>
     </tr>
     <tr>
