--- a/perekladachka.html
+++ b/perekladachka.html
@@ -9,7 +9,7 @@
 <body>
 <header>
     <div class="h1">
-        <h1>Розклад занять ПІ-22-1ict (1тиж) від 14 квітня</h1>
+        <h1>Розклад занять ПІ-22-1ict (1тиж)</h1>
     </div>
 </header>
     <!--nav>
