--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -9,7 +9,7 @@
 <body>
 <header>
     <div class="h1">
-        <h1>Розклад занять (2тиж)</h1>
+        <h1>Розклад занять ПІ-22-1ict (2тиж)</h1>
     </div>
 </header>
     <!--<nav>
@@ -96,8 +96,8 @@
         <td>1</td>
         <td>08:30-09:50</td>
         <td></td>
-        <td>Архітектура та проєктування програмного забезпечення_ (лекція)_ Талалаєв Володимир Опанасович</td>
-        <td><a href="https://us05web.zoom.us/j/6946850059?pwd=VWhOaGd5RVErNHBNNEI5RGVybVpBQT09" target="_blank">Натисніть</a> Код доступа: RB7NaD</td>
+        <td></td>
+        <td></td>
     </tr>
     <tr>
         <td>2</td>
@@ -214,8 +214,8 @@
         <td>2</td>
         <td>10:00-11:20</td>
         <td></td>
-        <td></td>
-        <td></td>
+        <td>Основи кіберфізичних систем_ (лекція)_ Молчанов Андрій Сергійович</td>
+        <td><a href="https://zoom.us/j/4415014552?pwd=GXzzLqgfQB2DbvBNtqj5kH3YibkjLm.1&omn=91342973471" target="_blank">Натисніть</a></td>
     </tr>
     <tr>
         <td>3</td>
