--- a/perekladachka.html
+++ b/perekladachka.html
@@ -220,7 +220,7 @@
             <td>3</td>
             <td>11:40-13:00</td>
             <td></td>
-            <td>Програмування мікроконтролерів_ (лекція)_ Самарай Валерій Петрович</td>
+            <td>Програмування мікроконтролерів_ (практична)_ Самарай Валерій Петрович</td>
             <td><a href="https://us04web.zoom.us/j/6758492120?pwd=QVlYdDhBb0hpRFU3TGNMdzJPbysyUT09" target="_blank">Натисніть</a></td>
         </tr>
         <tr>
