--- a/perekladachka.html
+++ b/perekladachka.html
@@ -248,7 +248,7 @@
             <td>7</td>
             <td>17:40-19:00</td>
             <td></td>
-            <td>Іноземна мова за професійним спрямуванням_ (практична)_ Домніч Л.М.</td>
+            <td>Іноземна мова за професійним спрямуванням_ Домніч Л.М.</td>
             <td><a href="https://us05web.zoom.us/j/87695261383?pwd=QaNbjMDteeSKfTgjkn9oanJATNdqax.1" target="_blank">Натисніть</a></td>
         </tr>
     </table>
