--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -157,7 +157,7 @@
     <tr>
         <td>2</td>
         <td>10:00-11:20</td>
-        <td></td>
+        <td>(21.05 бути!)</td>
         <td>Дослідження операцій_ (практична)_ Мельник Олександр Вікторович</td>
         <td><a href="https://us04web.zoom.us/j/6224901769?pwd=TUtzc0taaU1HNzBxZ21pbUI2L2NSUT09" target="_blank">Натисніть</a></td>
     </tr>
@@ -249,7 +249,7 @@
         <td>7</td>
         <td>17:40-19:00</td>
         <td></td>
-        <td>Іноземна мова за професійним спрямуванням_ (практична)_ Домніч Л.М.</td>
+        <td>Іноземна мова за професійним спрямуванням_ Домніч Л.М.</td>
         <td><a href="https://us05web.zoom.us/j/87695261383?pwd=QaNbjMDteeSKfTgjkn9oanJATNdqax.1" target="_blank">Натисніть</a></td>
     </tr>
 </table>
