--- a/perekladachka.html
+++ b/perekladachka.html
@@ -219,14 +219,14 @@
         <tr>
             <td>3</td>
             <td>11:40-13:00</td>
-            <td></td>
+            <td>відм. відв.</td>
             <td>Програмування мікроконтролерів_ (практична)_ Самарай Валерій Петрович</td>
             <td><a href="https://us04web.zoom.us/j/6758492120?pwd=QVlYdDhBb0hpRFU3TGNMdzJPbysyUT09" target="_blank">Натисніть</a></td>
         </tr>
         <tr>
             <td>4</td>
             <td>13:10-14:30</td>
-            <td></td>
+            <td>відм. відв.</td>
             <td>Програмування мікроконтролерів_ (практична)_ Самарай Валерій Петрович</td>
             <td><a href="https://us04web.zoom.us/j/6758492120?pwd=QVlYdDhBb0hpRFU3TGNMdzJPbysyUT09" target="_blank">Натисніть</a></td>
         </tr>
