--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -157,7 +157,7 @@
     <tr>
         <td>2</td>
         <td>10:00-11:20</td>
-        <td>(21.05 бути!)</td>
+        <td>21.05 під питанням</td>
         <td>Дослідження операцій_ (практична)_ Мельник Олександр Вікторович</td>
         <td><a href="https://us04web.zoom.us/j/6224901769?pwd=TUtzc0taaU1HNzBxZ21pbUI2L2NSUT09" target="_blank">Натисніть</a></td>
     </tr>
@@ -220,14 +220,14 @@
     <tr>
         <td>3</td>
         <td>11:40-13:00</td>
-        <td></td>
+        <td>відм. відв.</td>
         <td>Програмування мікроконтролерів_ (практична)_ Самарай Валерій Петрович</td>
         <td><a href="https://us04web.zoom.us/j/6758492120?pwd=QVlYdDhBb0hpRFU3TGNMdzJPbysyUT09" target="_blank">Натисніть</a></td>
     </tr>
     <tr>
         <td>4</td>
         <td>13:10-14:30</td>
-        <td></td>
+        <td>відм. відв.</td>
         <td>Програмування мікроконтролерів_ (практична)_ Самарай Валерій Петрович</td>
         <td><a href="https://us04web.zoom.us/j/6758492120?pwd=QVlYdDhBb0hpRFU3TGNMdzJPbysyUT09" target="_blank">Натисніть</a></td>
     </tr>
