--- a/perekladachka.html
+++ b/perekladachka.html
@@ -32,9 +32,9 @@
         <tr>
             <th>№</th>
             <th>Час</th>
-            <th>Групи</th>
             <th>Дисципліна</th>
             <th>Zoom</th>
+            <th>Опис</th>
         </tr>
         </thead>
         <tr>
@@ -87,9 +87,9 @@
         <tr>
             <th>№</th>
             <th>Час</th>
-            <th>Групи</th>
             <th>Дисципліна</th>
             <th>Zoom</th>
+            <th>Опис</th>
         </tr>
         </thead>
         <tr>
@@ -102,9 +102,9 @@
         <tr>
             <td>2</td>
             <td>10:00-11:20</td>
-            <td></td>
             <td>Архітектура та проєктування програмного забезпечення_ (лекція)_ Талалаєв Володимир Опанасович</td>
             <td><a href="https://us05web.zoom.us/j/6946850059?pwd=VWhOaGd5RVErNHBNNEI5RGVybVpBQT09" target="_blank">Натисніть</a> Код доступа: RB7NaD</td>
+            <td></td>
         </tr>
         <tr>
             <td>3</td>
@@ -142,17 +142,17 @@
         <tr>
             <th>№</th>
             <th>Час</th>
-            <th>Групи</th>
             <th>Дисципліна</th>
             <th>Zoom</th>
+            <th>Опис</th>
         </tr>
         </thead>
         <tr>
             <td>1</td>
             <td>08:30-09:50</td>
-            <td></td>
             <td>Бази даних_ (лекція)_ Міронов Юрій Глібович</td>
             <td><a href="https://us04web.zoom.us/j/6635209883?pwd=K0NCS0hrZnI4d3U1RExUWlVTbVNQQT09" target="_blank">Натисніть</a></td>
+            <td></td>
         </tr>
         <tr>
             <td>2</td>
@@ -197,9 +197,9 @@
         <tr>
             <th>№</th>
             <th>Час</th>
-            <th>Групи</th>
             <th>Дисципліна</th>
             <th>Zoom</th>
+            <th>Опис</th>
         </tr>
         </thead>
         <tr>
@@ -212,23 +212,23 @@
         <tr>
             <td>2</td>
             <td>10:00-11:20</td>
-            <td></td>
             <td>Основи кіберфізичних систем_ (лекція)_ Молчанов Андрій Сергійович</td>
             <td><a href="https://zoom.us/j/4415014552?pwd=GXzzLqgfQB2DbvBNtqj5kH3YibkjLm.1&omn=91342973471" target="_blank">Натисніть</a></td>
+            <td></td>
         </tr>
         <tr>
             <td>3</td>
             <td>11:40-13:00</td>
-            <td>відм. відв.</td>
             <td>Програмування мікроконтролерів_ (практична)_ Самарай Валерій Петрович</td>
             <td><a href="https://us04web.zoom.us/j/6758492120?pwd=QVlYdDhBb0hpRFU3TGNMdzJPbysyUT09" target="_blank">Натисніть</a></td>
+            <td>відм. відв.</td>
         </tr>
         <tr>
             <td>4</td>
             <td>13:10-14:30</td>
-            <td>відм. відв.</td>
             <td>Програмування мікроконтролерів_ (практична)_ Самарай Валерій Петрович</td>
             <td><a href="https://us04web.zoom.us/j/6758492120?pwd=QVlYdDhBb0hpRFU3TGNMdzJPbysyUT09" target="_blank">Натисніть</a></td>
+            <td>відм. відв.</td>
         </tr>
         <tr>
             <td>5</td>
@@ -247,9 +247,9 @@
         <tr>
             <td>7</td>
             <td>17:40-19:00</td>
-            <td>відм. відв.</td>
             <td>Іноземна мова за професійним спрямуванням_ Домніч Л.М.</td>
             <td><a href="https://us05web.zoom.us/j/87695261383?pwd=QaNbjMDteeSKfTgjkn9oanJATNdqax.1" target="_blank">Натисніть</a></td>
+            <td>відм. відв.</td>
         </tr>
     </table>
     <!-------------------------------------->
@@ -259,9 +259,9 @@
         <tr>
             <th>№</th>
             <th>Час</th>
-            <th>Групи</th>
             <th>Дисципліна</th>
             <th>Zoom</th>
+            <th>Опис</th>
         </tr>
         </thead>
         <tr>
@@ -274,9 +274,9 @@
         <tr>
             <td>2</td>
             <td>10:00-11:20</td>
-            <td></td>
             <td>Основи кіберфізичних систем_ (практична)_ Молчанов Андрій Сергійович</td>
             <td><a href="https://zoom.us/j/4415014552?pwd=GXzzLqgfQB2DbvBNtqj5kH3YibkjLm.1&omn=91342973471" target="_blank">Натисніть</a></td>
+            <td></td>
         </tr>
         <tr>
             <td>3</td>
@@ -314,9 +314,9 @@
         <tr>
             <th>№</th>
             <th>Час</th>
-            <th>Групи</th>
             <th>Дисципліна</th>
             <th>Zoom</th>
+            <th>Опис</th>
         </tr>
         </thead>
         <tr>
